Fix x-overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,7 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
+  overflow-x: hidden;
 }
 
 header {
